<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/EndTurn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="endTurn"
            android:text="@string/EndTurn" />
        
        <Button
            android:id="@+id/button1kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addNewBrick1"
            android:text="@string/kg1" />

        <Button
            android:id="@+id/button2kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addNewBrick2"
            android:text="@string/kg2" />

        <Button
            android:id="@+id/button5kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addNewBrick5"
            android:text="@string/kg5" />

        <Button
            android:id="@+id/button10kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addNewBrick10"
            android:text="@string/kg10" />

        <Button
            android:id="@+id/EndGame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onEndGame"
            android:text="@string/EndGame" />

    </LinearLayout>

    <edu.msu.BlueSky.stacker.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>